# epopy

./: .gitignore  README.md  main.py  pyproject.toml  test_workflow.py
.github/workflows/: publish.yml
scripts/: verify_auth.py
src/epo_ops/: __init__.py  models.py
src/epo_ops/api/: search.py
src/epopy/: __init__.py  auth.py  client.py  decisions.py  models.py  patent.py
src/epopy/api/: retrieval.py  search.py
tests/: conftest.py  test_abstractions.py  test_api.py  test_auth.py  test_client.py  test_decisions.py  test_download.py  test_integration.py
