[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "epopy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "xmltodict>=0.13.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "respx>=0.20.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.0.0",
    "lxml>=5.0.0",
    "types-lxml>=2026.1.1",
    "python-dotenv>=1.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
strict = true
ignore_missing_imports = true

